--- a/NN/plots_preds_latex.tex
+++ b/NN/plots_preds_latex.tex
@@ -1,6 +1,6 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots_preds/R2-99.65-GRNN-Impedance module.png}
+    \includegraphics[width=0.8\textwidth]{plots_preds/R2-99.65-GRNN-Impedance-module.png}
     \caption{Prediction of Impedance module with GRNN - R-Squared: 0.97}
 \end{figure}
