--- a/NN/plots_preds_latex.tex
+++ b/NN/plots_preds_latex.tex
@@ -1,6 +1,6 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{plots_preds/R2-98.65-TanhReluFFNN-conc.png}
-    \caption{Prediction of conc with TanhReluFFNN epochs:50 - R-Squared: 0.99}
+    \includegraphics[width=0.8\textwidth]{plots_preds/lstm-plots/R2-0.9655.pnt}
+    \caption{R2-0.9655 - R-Squared: 0.97}
 \end{figure}
